kubernetes/apps/base/nginx-hello/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 8080
